Source/WebCore: Don't include CachedResources that haven't downloaded when populating the Web Inspector on load.

https://webkit.org/b/78447
rdar://problem/10843542

Reviewed by Brian Weinstein.

Test: inspector/protocol/page-agent.html

* inspector/InspectorPageAgent.cpp:
(WebCore::InspectorPageAgent::cachedResourcesForFrame): Skip CachedFonts and CachedImages that
return true for stillNeedsLoad.
* loader/cache/CachedFont.h:
(WebCore::CachedFont::stillNeedsLoad): Added.

LayoutTests: Updated test results to exclude CachedResources that haven't downloaded.

https://webkit.org/b/78447
rdar://problem/10843542

Reviewed by Brian Weinstein.

* inspector/protocol/page-agent-expected.txt: Updated. There is now only one font list
in the resources, when there was incorrectly two being listed. Only the font being used
is the one that downloaded and is listed now.

Canonical link: https://commits.webkit.org/95561@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107715 268f45cc-cd09-0410-ab3c-d52691b4dbfc